--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dpinones.github.io",
   "dependencies": {
     "@starknet-react/core": "^0.12.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "save-dev": "^0.0.1-security",
     "starknet": "^3.17.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
@@ -25,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
